<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character_details"
    android:orientation="vertical"
    android:padding="16dp">

    <com.example.schrecknet.MatrixRainView
        android:id="@+id/matrixRain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.example.schrecknet.MatrixRainView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/backgrounds_merits_flaws_container"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/backgrounds"
                android:gravity="center"
                android:fontFamily="@font/terminal"
                android:padding="20dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/background_1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/backgrounds1_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/background_1_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/background_2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/backgrounds2_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/background_2_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/background_3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/backgrounds3_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/background_3_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/background_4"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/backgrounds4_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/background_4_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/background_5"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/backgrounds5_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/background_5_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/background_6"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/backgrounds6_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/background_6_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/merits"
                android:gravity="center"
                android:fontFamily="@font/terminal"
                android:padding="20dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/merits_1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/merits1_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/merits_1_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/merits_2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/merits2_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/merits_2_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/merits_3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/merits3_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/merits_3_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/merits_4"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/merits4_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/merits_4_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/merits_5"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/merits5_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/merits_5_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/merits_6"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/merits6_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/merits_6_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/flaws"
                android:gravity="center"
                android:fontFamily="@font/terminal"
                android:padding="20dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/flaws_1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/flaws1_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/flaws_1_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/flaws_2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/flaws2_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/flaws_2_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/flaws_3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/flaws3_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/flaws_3_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/flaws_4"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/flaws4_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/flaws_4_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/flaws_5"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/flaws5_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/flaws_5_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/flaws_6"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/flaws6_hint"
                    android:fontFamily="@font/terminal">
                </EditText>
                <Spinner
                    android:id="@+id/flaws_6_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/blood_potency_quantity">
                </Spinner>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>